--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div id="container">
-        <h1 id="main-question">Barışalım mı artık? 😊</h1>
+        <h1 id="main-question">Tamam hadi çok küs kaldık 😊</h1>
         <div id="initial-buttons">
             <button id="yes-btn">EVET 😊</button>
             <button id="no-btn">Hayır 😠</button>
         </div>
         <div id="yes-message" class="hidden">
-            <h2>Oleyyyyyyy 🎉</h2>
-            <p>💕 Seni seviyorum essek 😘</p>
+            <h2>BARIŞTIĞIMIZA GÖRE BENİ SEVDİĞİNİ SÖYLE MENEKŞEM BENİM 🎉</h2>
+            <p>Seni seviyorum kırılma bana ganerem 😘</p>
         </div>
         <div id="no-message" class="hidden">
             <h2>Kaçış yok! 😈</h2>
@@ -23,7 +23,7 @@
             <p class="forced-yes">Otomatik olarak EVET'e basılmış sayılıyorsun! ❤️ 🥰</p>
             <p class="small-text">Sizi barıştıran kişiyi takip edin: <a href="#" target="_blank">Tıkla</a></p>
         </div>
-        <p id="footer-text" class="small-text">Barışalım mı? ❤️</p>
+        <p id="footer-text" class="small-text">Barışmazsan öperim ❤️</p>
     </div>
     <script src="script.js"></script>
 </body>
